# mailflow

./: .gitignore  DEPLOYMENT_STATUS.md  README.md  _ul-HPBIG25  _ul-HPBIG25-2  electron-builder.json  index.html  package-lock.json  package.json  start-dev.cmd  vercel.json  vite.config.js
.claude/: launch.json
.vercel/: project.json
api/: portal-sg-fristeingabe.js
artis_agent/: agent.py  build.bat  requirements.txt
docs/samples/: camt054-sample.xml
electron/: commands.cjs  excel-server.cjs  main.cjs  preload.cjs
functions/: adminResetAllDeltaLinks.ts  deleteOutlookMail.ts  deleteUser.ts  forwardOutlookMail.ts  getAllUsers.ts  getOutlookAttachments.ts  inviteUser.ts  makeAdmin.ts  markAsReadInOutlook.ts  microsoftAuth.ts  microsoftCallback.ts  onMailItemDelete.ts  onMailItemUpdate.ts  replyOutlookMail.ts  resetAndSyncOutlook.ts  sendOutlookMail.ts  setTestReminders.ts  syncOutlookMails.ts  syncOutlookMailsWorker.ts  updateUserProfile.ts  whisperTranscribe.ts
mockups/: jahresplanung-mockup.html
mockups/fibu/: fibu-konzept-mockup.html
mockups/kunden/: 01-command-center.html  02-pipeline-kanban.html  03-data-grid.html  04-switchable-grid-profile.html
mockups/leistungserfassung/: index.html  tagesansicht-v2.html
public/: manifest.json
src/: App.jsx  Layout.jsx  globals.css  main.jsx  pages.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: steuerdaten.js  (+1 more)
supabase/: config.toml
tools/: abgleich_adressen.py  import_mandatsleiter.py  import_runner.py  import_vorschau.py
(+318 files in other folders)
